# faststack

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  worklog.md
faststack/: __init__.py  app.py  cli.py  config.py  database.py  demo_routes.py  loader.py  router.py
faststack/admin/: __init__.py  registry.py  routes.py
faststack/auth/: __init__.py  jwt.py  models.py  password_reset.py  permissions.py  routes.py  utils.py
faststack/contrib/: __init__.py
faststack/contrib/messages/: __init__.py  api.py  constants.py  middleware.py  storage.py
faststack/core/: __init__.py  dependencies.py  email.py  responses.py  session.py  signals.py  uploads.py
faststack/core/pagination/: __init__.py  paginator.py
faststack/faststack/: __init__.py
faststack/faststack/auth/backends/: __init__.py
faststack/faststack/auth/social/: __init__.py  adapter.py  base.py  manager.py
faststack/faststack/auth/social/providers/: __init__.py
faststack/faststack/auth/validators/: __init__.py
faststack/faststack/contrib/admin/: __init__.py  registry.py  views.py
faststack/faststack/contrib/contenttypes/: __init__.py  fields.py  models.py  utils.py
faststack/faststack/contrib/flatpages/: __init__.py  middleware.py  models.py  views.py
faststack/faststack/contrib/gis/: __init__.py  fields.py  functions.py  measure.py  models.py
faststack/faststack/contrib/redirects/: __init__.py  middleware.py  models.py
faststack/faststack/contrib/sitemaps/: __init__.py
faststack/faststack/contrib/syndication/: __init__.py
faststack/faststack/core/: streaming.py
faststack/faststack/core/apps/: __init__.py
faststack/faststack/core/cache/: __init__.py  base.py  decorators.py  utils.py
faststack/faststack/core/cache/backends/: __init__.py  database.py  locmem.py  redis.py
faststack/faststack/core/checks/: __init__.py
faststack/faststack/core/decorators/: __init__.py
faststack/faststack/core/humanize/: __init__.py
faststack/faststack/core/i18n/: __init__.py  middleware.py  translation.py  utils.py
faststack/faststack/core/management/: __init__.py
faststack/faststack/core/messages/: __init__.py  api.py  constants.py  message.py  middleware.py  storage.py
faststack/faststack/core/pagination/: __init__.py  paginator.py  utils.py
faststack/faststack/core/sessions/: __init__.py  backends.py  middleware.py  models.py
faststack/faststack/core/shortcuts/: __init__.py
faststack/faststack/database/: routing.py
faststack/faststack/forms/: __init__.py  fields.py  forms.py  validators.py  widgets.py
faststack/faststack/middleware/clickjacking/: __init__.py
faststack/faststack/migrations/: __init__.py  migration.py  operations.py
faststack/faststack/orm/query/: __init__.py  expressions.py  f.py  functions.py  optimization.py  q.py
faststack/faststack/template/context_processors/: __init__.py
faststack/faststack/testing/: __init__.py  assertions.py  client.py  fixtures.py  testcases.py  utils.py
faststack/faststack/utils/: __init__.py  encoding.py  functional.py  lazy.py
faststack/faststack/views/: __init__.py  base.py  generic.py  mixins.py
faststack/middleware/: __init__.py  csrf.py  logging.py  ratelimit.py  security.py  session.py
faststack/orm/: __init__.py  aggregation.py  base.py  crud.py  expressions.py  query_utils.py
faststack/orm/query/: __init__.py  f.py  functions.py  optimization.py  q.py
faststack/templates/: base.html
faststack/templates/admin/: dashboard.html  form.html  list.html
faststack/templates/auth/: forgot_password.html  login.html  profile.html  register.html  reset_password.html  reset_password_invalid.html
faststack/templates/demo/: index.html
faststack/templates/errors/: 400.html  403.html  404.html  500.html  debug.html  error.html
faststack/templates/pages/: home.html
faststack/templates/partials/: frontend_default.html  frontend_fastui.html
tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_cli_jwt.py  test_contrib.py  test_core.py  test_forms.py  test_middleware.py  test_orm.py  test_views.py
