[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faststack"
version = "0.1.0"
description = "Async-first Python framework built on FastAPI with integrated templating, ORM, admin, and CLI using uv"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "FastStack Team", email = "hello@faststack.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.4",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
faststack = "faststack.cli:app"

[project.urls]
Homepage = "https://github.com/faststack/faststack"
Documentation = "https://faststack.dev/docs"
Repository = "https://github.com/faststack/faststack"
Issues = "https://github.com/faststack/faststack/issues"

[tool.setuptools.packages.find]
include = ["faststack*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
