[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faststack-framework"
version = "0.1.0"
description = "Async-first Python framework built on FastAPI with integrated templating, ORM, admin, and CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "FastStack Team", email = "hello@faststack.dev"}
]
maintainers = [
    {name = "Omer Harr", email = "omer@faststack.dev"}
]
keywords = [
    "fastapi",
    "async",
    "web",
    "framework",
    "django-alternative",
    "htmx",
    "orm",
    "admin",
    "jinja2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.22",
    "jinja2>=3.1.4",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.1",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.17",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "starlette>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
redis = [
    "redis>=5.0.0",
]
postgres = [
    "asyncpg>=0.30.0",
]
mysql = [
    "aiomysql>=0.2.0",
]
markdown = [
    "markdown>=3.7",
    "bleach>=6.2",
]

[project.scripts]
faststack = "faststack.cli:app"

[project.urls]
Homepage = "https://github.com/Omerhrr/faststack"
Documentation = "https://github.com/Omerhrr/faststack#readme"
Repository = "https://github.com/Omerhrr/faststack"
Issues = "https://github.com/Omerhrr/faststack/issues"
Changelog = "https://github.com/Omerhrr/faststack/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["faststack*"]
namespaces = true

[tool.setuptools.package-data]
faststack = ["templates/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__", "*.db", "*.sqlite"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
